bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:15: error: Unmatched closing brace '}' ignored here
}
^